--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@
   box-sizing: border-box;
 }
 :root{
-  background-color: rgb(48, 47, 47);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(36, 34, 44);
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
